# pykrieg

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  KFEN-SPECIFICATION.md  LICENSE  PROTOCOL-SPECIFICATION.md  README.md  ROADMAP.md  USAGE.md  mypy.ini  play.sh  pykrieg_save.fen  pykrieg_save.kfen  pykrieg_save_save.fen  pyproject.toml  rules.md  test_fallback_clearing.py  test_swift_units.py
.github/workflows/: publish.yml  release.yml  test.yml  testpypi.yml
docs/: api.rst  conf.py  index.rst  requirements.txt  rules
scripts/: convert_test_coordinates.py  extract_changelog.py
src/pykrieg/: __init__.py  board.py  combat.py  constants.py  fen.py  kfen.py  movement.py  pieces.py  turn.py  types.py  undo_redo.py  victory.py
src/pykrieg/console/: __init__.py  __main__.py  curses_input.py  default_starting_position.fen  default_starting_position.kfen  display.py  game.py  input_buffer.py  mouse_handler.py  parser.py  terminal.py
src/pykrieg/protocol/: __init__.py  engine.py  exceptions.py  parser.py  response.py  uci.py
tests/: __init__.py  test_board.py  test_board_adjacency_relay.py  test_combat.py  test_console.py  test_console_coverage.py  test_constants.py  test_coordinates.py  test_display.py  test_fen.py  test_gaps.py  test_input_buffer.py  test_integration.py  test_kfen.py  test_kfen_edge_cases.py  test_kfen_integration.py  test_kfen_pending_retreats.py  test_kfen_performance.py  test_kfen_properties.py  test_kfen_whitespace.py  test_mouse_handler.py  test_movement.py  test_movement_network_proximity.py  test_parser.py  test_pathfinding.py  test_protocol_engine.py  test_protocol_integration.py  test_protocol_parser.py  test_protocol_response.py  test_retreat_enforcement.py  test_special_rules.py  test_success_criteria.py  test_terrain_combat.py  test_terrain_display.py  test_terrain_movement.py  test_turn.py  test_undo_redo.py  test_units.py  test_victory.py
tests/test_network/: __init__.py  test_console_relay_chaining.py  test_default_starting_position.py  test_effective_stats.py  test_proximity_propagation.py  test_ray_propagation.py  test_relay_chaining.py
